--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page Mario</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
+
+    <title>Super Mario Bros - O Filme</title>
 </head>
 <body>
+    <div class="fundo-video">
+        <video class="video" autoplay loop muted>
+            <source src="src/imagens/video-mario.mp4" type="video/mp4">
+        </video>
+    </div>
     <header class="cabecalho">
         <a href=""><img class="logo" src="src/imagens/logo-chapeu-mario.png" alt="logo chapéu mário"></a>
         <nav >
