Criado o estilo nao responsivo e modal do botao trailer.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/style.css">
 
     <title>Super Mario Bros - O Filme</title>
 </head>
@@ -21,8 +23,8 @@
         <a href=""><img class="logo" src="src/imagens/logo-chapeu-mario.png" alt="logo chapéu mário"></a>
         <nav >
             <ul class="menu">
-                <li>Home</li>
-                <li>Detalhes</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Detalhes</a></li>
             </ul>
         </nav>
     </header>
@@ -30,9 +32,15 @@
         <div class="conteudo">
             <img class="imagem-titulo" src="src/imagens/titulo.png" alt="Título super mario bros">
             <p class="texto-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure facilis nostrum eaque. Explicabo autem quod cupiditate dolorum unde praesentium vitae, quam enim amet tenetur fugit ut magnam sit laudantium quibusdam.</p>
-            <button class="botao">Veja o trailer</button>
+            <button class="botao-trailer">Veja o trailer</button>
         </div>
             <img src="src/imagens/super-mario-chars.png" alt="" class="mario">
+        <div class="modal">
+            <div class="conteudo-modal">
+                <span class="fechar-modal">X</span>
+                <iframe id="video" src="https://www.youtube.com/embed/Cb4WV4aXBpk" width="560" height="315" title="Trailer-oficial" frameborder="1" allow="accelerometer; autopĺay; clipboard-write; encripted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
     </main>
 </body>
 </html>
