Adicionados os estilos responsivos.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="src/imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/responsivo.css">
 
     <title>Super Mario Bros - O Filme</title>
 </head>
@@ -31,7 +32,7 @@
     <main class="container">
         <div class="conteudo">
             <img class="imagem-titulo" src="src/imagens/titulo.png" alt="Título super mario bros">
-            <p class="texto-descricao">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure facilis nostrum eaque. Explicabo autem quod cupiditate dolorum unde praesentium vitae, quam enim amet tenetur fugit ut magnam sit laudantium quibusdam.</p>
+            <p class="texto-descricao">Mario é um encanador junto com seu irmão Luigi. Um dia, eles vão parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçadopelo rei dos Kaapas, que faz de tudo para conseguir reinar em todos os lugares.</p>
             <button class="botao-trailer">Veja o trailer</button>
         </div>
             <img src="src/imagens/super-mario-chars.png" alt="" class="mario">
